--- a/Assignment_5/src/app/app.component.html
+++ b/Assignment_5/src/app/app.component.html
@@ -3,6 +3,8 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <app-active-users></app-active-users>
       <app-inactive-users></app-inactive-users>
+      <p>Active To Inactive: {{ ati }}</p>
+      <p>Inactive To Active: {{ ita }}</p>
     </div>
     <!--
       Optimize this app by adding a UsersService which manages the active and inactive users.
